--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
 		"dot-json": "^1.1.0",
 		"eslint": "^6.1.0",
 		"eslint-config-xo": "^0.26.0",
+		"file-loader": "^6.0.0",
 		"npm-run-all": "^4.1.5",
 		"size-plugin": "^1.2.0",
 		"stylelint": "^10.1.0",
@@ -35,8 +36,12 @@
 		"xo": "^0.24.0"
 	},
 	"dependencies": {
+		"date-fns": "^2.14.0",
+		"htm": "^3.0.4",
+		"lodash.get": "^4.4.2",
+		"preact": "^10.4.4",
 		"webext-options-sync": "^0.21.2",
-		"webextension-polyfill": "^0.4.0"
+		"webextension-polyfill": "^0.6.0"
 	},
 	"xo": {
 		"envs": [
