--- a/source/manifest.json
+++ b/source/manifest.json
@@ -1,8 +1,8 @@
 {
-	"name": "Awesome Extension",
-	"version": "0.0.0",
-	"description": "An awesome new browser extension",
-	"homepage_url": "https://github.com/awesome-templates/browser-extension-template",
+	"name": "AMBOSS",
+	"version": "0.0.1",
+	"description": "AMBOSSIFY the medical terms in a website",
+	"homepage_url": "https://www.amboss.com",
 	"manifest_version": 2,
 	"minimum_chrome_version": "74",
 	"applications": {
@@ -15,17 +15,43 @@
 		"128": "icon.png"
 	},
 	"permissions": [
-		"storage"
+	  	"https://storage.googleapis.com/*",
+	  	"https://cdn.segment.com/*",
+		"storage",
+	  	"tabs",
+	  	"webNavigation"
 	],
+  	"content_security_policy": "script-src 'unsafe-eval' 'self' https://cdn.segment.com https://js.intercomcdn.com/ https://widget.intercom.io/widget/ https://www.google-analytics.com/; object-src 'self'",
 	"options_ui": {
 		"chrome_style": true,
-		"page": "options.html"
+		"page": "options-ui-page.html"
 	},
+	"browser_action": {
+	  "browser_style": true,
+	  "default_title": "AMBOSS",
+	  "default_popup": "browser-action-page.html"
+	},
+	"content_scripts": [
+	  {
+		"exclude_globs": [
+		  "*:*.paypal.*/*",
+		  "*:*.amboss.*/*",
+		  "*:*medicuja.*/*",
+		  "*:*google.*/*",
+		  "*:*ecosia.*/*",
+		  "*:duckduckgo.*/*",
+		  "*:mail.yahoo.com/*",
+		  "*:*.hotmail.*/*",
+		  "*:*.outlook.com/*",
+		  "*:*.icloud.*/*"
+		],
+		"matches": ["*://*/*"],
+		"css": ["content-script-styles.css"],
+		"js": ["browser-polyfill.min.js","content-script.js"]
+	  }
+	],
 	"background": {
 		"persistent": false,
-		"scripts": [
-			"browser-polyfill.min.js",
-			"background.js"
-		]
+		"page": "background-page.html"
 	}
 }
