--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
 		"htm": "^3.0.4",
 		"lodash.get": "^4.4.2",
 		"preact": "^10.4.4",
+		"tippy.js": "^6.2.3",
 		"webext-options-sync": "^0.21.2",
 		"webextension-polyfill": "^0.6.0"
 	},
