--- a/source/manifest.json
+++ b/source/manifest.json
@@ -1,18 +1,19 @@
 {
-	"name": "AMBOSS",
+	"name": "__MSG_extensionName__",
 	"version": "0.0.1",
-	"description": "AMBOSSIFY the medical terms in a website",
+  	"default_locale": "en",
+	"description": "__MSG_extensionDescription__",
 	"homepage_url": "https://www.amboss.com",
 	"manifest_version": 2,
 	"minimum_chrome_version": "74",
 	"applications": {
 		"gecko": {
-			"id": "awesome-extension@notlmn.github.io",
+			"id": "amboss-mededu/amboss-browser-plugin",
 			"strict_min_version": "67.0"
 		}
 	},
 	"icons": {
-		"128": "icon.png"
+	  "128": "media/ambosslogo.png"
 	},
 	"permissions": [
 		"storage"
@@ -43,7 +44,7 @@
 	},
 	"browser_action": {
 	  "browser_style": true,
-	  "default_title": "AMBOSS",
+	  "default_title": "__MSG_browserActionDefaultTitle__",
 	  "default_popup": "browser-action-page.html"
 	},
 	"background": {
