--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
 		"eslint": "^6.1.0",
 		"eslint-config-xo": "^0.26.0",
 		"file-loader": "^6.0.0",
+		"minimist": "^1.2.5",
+		"node-fetch": "^2.6.0",
 		"npm-run-all": "^4.1.5",
 		"size-plugin": "^1.2.0",
 		"stylelint": "^10.1.0",
