--- a/source/manifest.json
+++ b/source/manifest.json
@@ -6,19 +6,13 @@
 	"homepage_url": "https://www.amboss.com",
 	"manifest_version": 2,
 	"minimum_chrome_version": "74",
-	"applications": {
-		"gecko": {
-			"id": "amboss-mededu/amboss-browser-plugin",
-			"strict_min_version": "67.0"
-		}
-	},
 	"icons": {
 	  "128": "media/ambosslogo.png"
 	},
 	"permissions": [
 		"storage"
 	],
-  	"content_security_policy": "script-src 'unsafe-eval' 'self' https://cdn.segment.com; object-src 'self'",
+  	"content_security_policy": "script-src 'self' https://cdn.segment.com; object-src 'self'",
 	"content_scripts": [
 	  {
 		"exclude_globs": [
