--- a/source/manifest.json
+++ b/source/manifest.json
@@ -6,7 +6,13 @@
 	"homepage_url": "https://www.amboss.com",
 	"manifest_version": 2,
 	"minimum_chrome_version": "74",
-	"icons": {
+	"browser_specific_settings": {
+	  "gecko": {
+		"id": "chrome.webstore@medicuja.com",
+		"strict_min_version": "57.0"
+	  }
+	},
+  "icons": {
 	  "128": "media/ambosslogo.png"
 	},
 	"permissions": [
