--- a/package.json
+++ b/package.json
@@ -5,17 +5,24 @@
 		"watch": "webpack --mode=development --watch",
 		"release:cws": "webstore upload --source=distribution --auto-publish",
 		"release:amo": "web-ext-submit --source-dir distribution",
-	  "runIt": "cd distribution && web-ext lint"
+		"lint": "cd distribution && web-ext lint",
+		"zip": "cd distribution && web-ext build"
 	},
+	"browserslist": [
+		"Chrome >= 70",
+		"Firefox >= 70.0"
+	],
 	"devDependencies": {
 		"@babel/core": "^7.10.2",
 		"@babel/preset-env": "^7.10.2",
 		"babel-loader": "^8.1.0",
 		"chrome-webstore-upload-cli": "^1.2.0",
+		"clean-webpack-plugin": "^3.0.0",
 		"copy-webpack-plugin": "^5.0.3",
-		"dot-json": "^1.1.0",
 		"eslint": "^6.1.0",
 		"file-loader": "^6.0.0",
+		"html-webpack-plugin": "^4.3.0",
+		"html-webpack-tags-plugin": "^2.0.17",
 		"minimist": "^1.2.5",
 		"node-fetch": "^2.6.0",
 		"size-plugin": "^1.2.0",
