--- a/source/manifest.json
+++ b/source/manifest.json
@@ -5,15 +5,15 @@
 	"description": "__MSG_extensionDescription__",
 	"homepage_url": "https://www.amboss.com",
 	"manifest_version": 2,
-	"minimum_chrome_version": "74",
+	"minimum_chrome_version": "70",
 	"browser_specific_settings": {
 	  "gecko": {
 		"id": "chrome.webstore@medicuja.com",
-		"strict_min_version": "57.0"
+		"strict_min_version": "70.0"
 	  }
 	},
   "icons": {
-	  "128": "media/ambosslogo.png"
+	  "128": "ambosslogo.png"
 	},
 	"permissions": [
 		"storage"
